--- a/src/web/css/loader.css
+++ b/src/web/css/loader.css
@@ -11,7 +11,7 @@
   opacity: .75;
   zoom: 1.5;
   transition: .25s ease-in-out;
-  z-index: 100;
+  z-index: 3000;
   pointer-events: none;
   margin-top: -2.5rem;
   text-align: center;
